@@ -19,6 +19,11 @@ test {
 sourceCompatibility = 1.12
 targetCompatibility = 1.12
 
-sourceSets.main.java.srcDirs = ['src']
+sourceSets.main.java.srcDirs = ['src', 'vendor']
 sourceSets.main.resources.srcDirs = ['res']
 sourceSets.test.java.srcDirs = ['test']
+
+//java version 17
+tasks.withType(JavaCompile) {
+    options.compilerArgs << '--enable-preview' << '--release' << '17'
+}
